data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_626.wast
;; 7. **Reinitializing Execution**: Set up nested loops where an instruction forces a branch (`br`) causing reinitialization of the innermost loop. This checks if the loop behaves correctly when restarted and ensures that the instructions are correctly reexecuted from the beginning.

(assert_invalid
  (module
    (func $reinitialize_loop
      (loop (result i32)
        (i32.const 1)
        (br 0)
        (i32.const 2)  ;; This should never execute
      )
      (drop)
    )
  )
  "unreachable code"
)